Into a new repository

--- a/index.html
+++ b/index.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Flexbox</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800;900&family=Lexend+Deca:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Flexbox</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800;900&family=Lexend+Deca:wght@100;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <main class="main-container"> 
-        <div class="orange-div">
-                <span class="dot"></span>
-                <img src="./carr.png" alt="car icon">
-                <h3>SEDANS</h3>
-                <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
-                <button type="button" class="btn"> Learn More </button>
-        </div>
-        <div class="blue-div">
-                <span class="dot"></span>
-                <img src="./carr.png" alt="car icon">
-                <h3>SUVS</h3>
-                <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
-                <button type="button" class="btn"> Learn More </button>
-        </div>
-        <div class="green-div">
-                <span class="dot"></span>
-                <img src="./carr.png" alt="car icon">
-                <h3>LUXURY</h3>
-                <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arive in style.</p>
-                <button type="button" class="btn"> Learn More </button>
-        </div>
+  <div class="div-body">
+<!--     <div class="button-div"> -->
+      <a href="./grid.html"><button type="button" id="button">Go To Grid Task</button></a>
+<!--     </div> -->
+    <main class="main-container">
+      <div class="orange-div">
+        <!-- <span class="dot"></span> -->
+        <img src="./icon-sedans.svg" alt="car icon">
+        <h3>SEDANS</h3>
+        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your
+          next road trip.</p>
+        <a href="./grid.html"><button type="button" class="btn"> Learn More </button></a>
+      </div>
+      <div class="blue-div">
+        <!-- <span class="dot"></span> -->
+        <img src="./icon-suvs.svg" alt="car icon">
+        <h3>SUVS</h3>
+        <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
+          off-road adventures.</p>
+        <a href="./grid.html"><button type="button" class="btn"> Learn More </button></a>
+      </div>
+      <div class="green-div">
+        <!-- <span class="dot"></span> -->
+        <img src="./icon-sedans.svg" alt="car icon">
+        <h3>LUXURY</h3>
+        <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and
+          arive in style.</p>
+        <a href="./grid.html"><button type="button" class="btn"> Learn More </button></a>
+      </div>
     </main>
+  </div>
 </body>
+
 </html>
